--- a/alt.fedoraproject.org/data/content/prerelease/index.html
+++ b/alt.fedoraproject.org/data/content/prerelease/index.html
@@ -241,56 +241,56 @@
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/server.png" />
                   ${_('Fedora Server DVD')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
                   ${_('DVD')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-dvd-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/server.png" />
                   ${_('Fedora Server Netinstall')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
                   ${_('Net')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/aarch64/iso/Fedora-Server-netinst-aarch64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud qcow2')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('qcow2')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud raw')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('raw')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/aarch64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/docker.png" />
                   ${_('Fedora Docker')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/docker.png" />
                   ${_('Docker')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
               </div>
             </div>
@@ -320,7 +320,7 @@
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
                   ${_('DVD')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-dvd-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
@@ -331,31 +331,31 @@
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/server.png" />
                   ${_('Net')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['next_alt_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Server/ppc64/iso/Fedora-Server-netinst-ppc64-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud qcow2')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('qcow2')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('Fedora Cloud raw')}
-                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
                 <h3 class="panel-title accordion-title visible-xs">
                   <img src="/static/images/cloud.png" />
                   ${_('raw')}
-                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/CloudImages/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
+                  <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Cloud/ppc64/images/Fedora-Cloud-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
                 </h3>
-                <div class="grey-hr"></div>
+<!--                <div class="grey-hr"></div>
                 <h3 class="panel-title accordion-title hidden-xs">
                   <img src="/static/images/docker.png" />
                   ${_('Fedora Docker')}
@@ -365,7 +365,7 @@
                   <img src="/static/images/docker.png" />
                   ${_('Docker')}
                   <span class="mobile-download"><a href="${global_variables.path['download_arch']}/test/${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}/Container/ppc64/images/Fedora-Container-Base-${global_variables.release['next_alt_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify-prereleases.html">${_('Verify')}</a></span>
-                </h3>
+                </h3> -->
               </div>
             </div>
           </div>
