--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -157,10 +157,8 @@
           <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2019-tickets-55502933769">Flock 2019 event</a> online now. If you need or think you will need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSexQqHA9gN-KuxT6GAxqN-jt3OXRXThh9qREIkowFLUZ0G7tA/viewform">Event Visa Invitation Letter Request Form</a>.</p>
           <p>Flock 2019 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
           <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
-<!--
-          <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9KR0oXmBiIl2I12hn3dln2795zDCFSMEFf9rtGngd7pl1dQ/viewform?usp=sf_link">funding request form</a>. You can (and should) wait to register until you have received your funding decision.  Funding decisions begin being made on 25 June, 2018 and will be made on a continuously rolling basis from then.</p>
--->
-          <p>Attendees who registered and paid the registration fee by July 8, 2018 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
+          <p>If you need travel funding for Flock, you may apply using the <a href=""https://docs.google.com/forms/d/18BYuHS-91gt5_zaNAskn4-aF5cNimshuZzXu4yo_fz4/>funding request form</a>. You should register for Flock as soon as you know you are likely to attend, even if you are waiting on a funding decision or visa letter. Funding decisions begin being made on 1 June, 2019 and will be made on a continuously rolling basis from then.</p>
+          <p>Attendees who registered and paid the registration fee by July 8, 2019 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you may not receive benefits such as lunch and a shirt.</p>
 
         </div>
