--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -150,7 +150,7 @@
 <!--
 	  <p>Coming soon...</p>
           <p><mark>Late Registration for Flock is still open.</mark>  You may also register on-site.  Late registrants are not guranteed all benefits of registration including swag and food.  These will provided if we have capacity.  This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
-          <p>We are no longer issuing visa letters as the event is less than one month away.  All travel funding has been issued.</p>
+          <p>We are no longer issuing visa letters as the event is less than one month away.</p>
 -->
 
           <p><mark>Registration for Flock is open.</mark></p>
@@ -159,8 +159,11 @@
 <!--
           <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
 -->
+          <p><mark>All travel funding has been issued.</mark></p>
+<!--
           <p><mark>Travel Funding Requests are now being accepted.</mark></p>
           <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/18BYuHS-91gt5_zaNAskn4-aF5cNimshuZzXu4yo_fz4/">funding request form</a>. You should register for Flock as soon as you know you are likely to attend, even if you are waiting on a funding decision or visa letter. Funding decisions begin being made on 1 June, 2019 and will be made on a continuously rolling basis from then.</p>
+-->
           <p>Attendees who registered and paid the registration fee by July 8, 2019 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you may not receive benefits such as lunch and a shirt.</p>
 
