--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -6,6 +6,7 @@
   <xi:include href="../templates/master.html" />
   <head>
     <title>${_('Flock To Fedora: Fedora Contributor Conference')}</title>
+    <meta property="og:image" content="../../static/images/sponsors/redhat.png" />
   </head>
 
   <body class="home" data-spy="scroll" data-target="#flocknav">
