--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -7,6 +7,8 @@
   <head>
     <title>${_('Flock To Fedora: Fedora Contributor Conference')}</title>
     <meta property="og:image" content="https://flocktofedora.org/static/images/sponsors/redhat.png" />
+    <meta property="og:image:height" content="202" />
+    <meta property="og:image:width" content="400" />
   </head>
 
   <body class="home" data-spy="scroll" data-target="#flocknav">
