--- a/alt.fedoraproject.org/data/content/verify.html
+++ b/alt.fedoraproject.org/data/content/verify.html
@@ -70,13 +70,12 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
             </div>
-            <!--
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le iso')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}-ppc64le-CHECKSUM">${_('For ppc64le images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le images')}</a
-	    </div>-->
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x images')}</a>
+            </div>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Cloud-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For Cloud Base images')}</a>
             </div>
@@ -89,11 +88,12 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}-aarch64-CHECKSUM">${_('For aarch64')}</a>
             </div>
-<!--
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}-ppc64le-CHECKSUM">${_('For ppc64le')}</a>
             </div>
--->
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['checksums']}/Fedora-Container-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_s390x']}-s390x-CHECKSUM">${_('For s390x')}</a>
+            </div>
         </div>
     </div>
 
